--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -21,12 +21,17 @@
     <string name="available_balance">Available Balance</string>
     <string name="memo">Memo</string>
     <string name="payee">Payee</string>
-    <string name="pay_from_acct_ending_in">Pay From %s</string>
+    <string name="pay_from_acct_ending_in">Pay From Account Ending in </string>
     <string name="status">Status</string>
     <string name="confirmation_number">Confirmation Number</string>
     <string name="payment_detail">Payment Detail</string>
     <string name="scheduled_payment">Scheduled Payment</string>
     <string name="completed_payment">Completed Payment</string>
+    <string name="cancelled_payment">Cancelled Payment</string>
     <string name="edit_payment">Edit Payment</string>
     <string name="delete_payment">Delete Payment</string>
+    <string name="non_primary_joint_account_warning">
+        This payment has been scheduled by %1$s. It can only be edited/deleted by %1$s.
+    </string>
+    
 </resources>
