--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -19,4 +19,8 @@
     
     <!-- Status bar height -->
     <dimen name="status_bar_height">40dp</dimen>
+    
+    <!-- Schedule Payments list height -->
+    <dimen name="listview_vertical_height">50dp</dimen>
+        
 </resources>
