--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -39,6 +39,12 @@
         <item name="android:background">@drawable/rounded_table_corners_no_padding</item>
     </style>
     
+        <style name="schedule_pay_list_element">
+        <item name="android:padding">7dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/listview_vertical_height</item>
+    </style>
+        
     <style name="login_white_pane">
         <item name="android:layout_marginLeft">@dimen/forms_inner_padding</item>
         <item name="android:layout_marginRight">@dimen/forms_inner_padding</item>
