--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -24,4 +24,10 @@
 	<string name="review_payments_filter_one">Date</string>
 	<string name="review_payments_filter_two">Payee</string>
 	<string name="review_payments_filter_three">Amount</string>
+	<string name="review_payments_scheduled_payments">Scheduled Payments</string>
+	<string name="review_payments_completed_payments">Completed Payments</string>
+	<string name="review_payments_canceled_payments">Canceled Payments</string>
+	<string name="review_payments_scheduled_payments_empty">You have no scheduled payments.</string>
+	<string name="review_payments_completed_payments_empty">You have no completed payments.</string>
+	<string name="review_payments_canceled_payments_empty">You have no cancelled payments.</string>
 </resources>
