--- a/Discover-Bank-Phone/res/layout/table_titles.xml
+++ b/Discover-Bank-Phone/res/layout/table_titles.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
-        android:weightSum="5" >
+        android:weightSum="4" >
 
         <RelativeLayout
             android:id="@+id/filter_1"
@@ -23,8 +23,7 @@
                 android:id="@+id/filter_text_1"
                 style="@style/sub_copy_medium"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content" />
 
             <ImageView
                 android:id="@+id/filter_image_1"
@@ -34,7 +33,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@+id/filter_text_1"
-                android:background="@drawable/orange_arrow_down" />
+                android:background="@drawable/orange_arrow_down"
+                android:visibility="gone"  />
         </RelativeLayout>
 
         <RelativeLayout
@@ -65,7 +65,7 @@
             android:id="@+id/filter_3"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="right" >
 
             <TextView
