--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -49,4 +49,5 @@
  	<string name="schedule_pay_memo_opt">Memo (Optional)</string>
  	<string name="schedule_pay_button">Pay Now</string>
  	<string name="schedule_pay_memo">Memo</string>
+ 	<string name="schedule_pay_spinner_body">Account Ending in</string>
 </resources>
