--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -50,4 +50,8 @@
  	<string name="schedule_pay_button">Pay Now</string>
  	<string name="schedule_pay_memo">Memo</string>
  	<string name="schedule_pay_spinner_body">Account Ending in</string>
+ 	<string name="schedule_pay_cancel_title">Cancel Transaction</string>
+ 	<string name="schedule_pay_cancel_body">Are you sure you want to cancel this transaction? Tap Cancel This Transaction to end it, or tap Don\'t Cancel to return to the previous page.</string>
+ 	<string name="schedule_pay_cancel_button_confirm">Cancel This Transaction</string>
+ 	<string name="schedule_pay_cancel_button_cancel">Don\'t Cancel</string>
 </resources>
