--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -157,98 +157,15 @@
         android:text="@string/activity_table_name"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/sort_filters"
+ 
+    <com.discover.mobile.bank.ui.table.TableTitles
+        android:id="@+id/table_titles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/table_title"
-        android:layout_marginBottom="@dimen/forms_inner_padding"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
-        android:orientation="horizontal"
-        android:weightSum="4" >
-
-        <RelativeLayout
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
-
-            <TextView
-                android:id="@+id/date_filter"
-                style="@style/sub_copy_medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recent_activity_date" />
-
-            <ImageView
-                android:id="@+id/date_filter_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/date_filter"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:layout_marginLeft="@dimen/small_margin"
-                android:layout_toRightOf="@+id/date_filter"
-                android:background="@drawable/orange_arrow_down"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" >
-
-            <TextView
-                android:id="@+id/description_filter"
-                style="@style/sub_copy_medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recent_activity_description" />
-
-            <ImageView
-                android:id="@+id/description_filter_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/description_filter"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:layout_marginLeft="@dimen/small_margin"
-                android:layout_toRightOf="@+id/description_filter"
-                android:background="@drawable/orange_arrow_down"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right" >
-
-            <TextView
-                android:id="@+id/amount_filter"
-                style="@style/sub_copy_medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recent_activity_amount" />
-
-            <ImageView
-                android:id="@+id/amount_filter_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/amount_filter"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:layout_marginLeft="@dimen/small_margin"
-                android:layout_toRightOf="@+id/amount_filter"
-                android:background="@drawable/orange_arrow_down"
-                android:visibility="gone" />
-        </RelativeLayout>
-    </LinearLayout>
-
-    <View
-        android:id="@+id/top_line"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/sort_filters"
-        android:background="@drawable/table_solid_line" />
+        android:layout_below="@+id/table_title"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
+        android:layout_marginTop="@dimen/between_related_elements_padding" />
 
 </RelativeLayout>
