--- a/Discover-Bank-Phone/res/layout/table_titles.xml
+++ b/Discover-Bank-Phone/res/layout/table_titles.xml
@@ -5,8 +5,11 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/fitlers"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
         android:baselineAligned="false"
         android:orientation="horizontal"
         android:layout_alignParentRight="true"
@@ -86,5 +89,15 @@
                 android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
+    
+    
+    <View
+        android:id="@+id/top_line"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/fitlers"
+        android:background="@drawable/table_solid_line" />
 
 </RelativeLayout>
