--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content" >
 
         <com.discover.mobile.common.nav.HeaderProgressIndicator
-            android:id="@+id/header"
+            android:id="@+id/schedule_pay_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
@@ -17,7 +17,7 @@
             android:id="@+id/sched_pay_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/header"
+            android:layout_below="@id/schedule_pay_header"
             android:layout_margin="15dp"
             android:background="@drawable/rounded_table_corners_shape"
             android:orientation="vertical"
@@ -162,7 +162,7 @@
                             android:id="@+id/date_edit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="7dp"
+                            android:layout_marginRight="@dimen/between_related_elements_padding"
                             android:layout_weight="1"
                             android:background="@drawable/edit_text_default"
                             android:focusable="false"
