--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -8,38 +8,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding"
+        android:gravity="center_horizontal"
         android:orientation="vertical" >
 
-        <include layout="@layout/status_bar" />
-
+         <LinearLayout
+		      android:layout_width="match_parent"
+		      android:layout_height="wrap_content"
+		      android:layout_weight="0.0625"
+		      android:layout_marginBottom="@dimen/between_related_elements_padding"
+		      android:orientation="vertical" >
+         	<include layout="@layout/status_bar" />
+         </LinearLayout>
+         
         <LinearLayout
+            android:id="@+id/bank_summary_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/forms_inner_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding"
-            android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:layout_weight="0.875"
+            android:orientation="vertical" />
 
-            <LinearLayout
-                android:id="@+id/bank_summary_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/between_related_elements_padding"
-                android:layout_weight="0.9375"
-                android:orientation="vertical" />
-
-            <TextView
-                android:id="@+id/provide_feedback_button"
-                style="@style/blue_hyperlink_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:layout_weight="0.0625"
-                android:gravity="bottom"
-                android:singleLine="true"
-                android:text="@string/feedback_text" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/provide_feedback_button"
+            style="@style/blue_hyperlink_small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_weight="0.0625"
+            android:gravity="bottom"
+            android:singleLine="true"
+            android:text="@string/feedback_text" />
     </LinearLayout>
-
 </ScrollView>
