US3878 - View Payees (Managed & Unmanaged) : TA12764 Navigation Flow. Added a menu option for the Manage Payees that follows the same logic as Pay Bills. Add new payee button is also connected to the first step of the add new payee flow.  TA12765/TA12766 Service call to retrieve payees list. Utilizes the same call as Pay Bills get payee call, populates the list with avaialble validated and unvalidated payees. TA12767 - UI Looks just like the comps and displays the approriate information for zero or more payees. TA12768 Integrate view pager widget. When a user selects a payee they are shown that payee in detail in the View Pager. They are able to swipe left and right to view verfied and unverfied payees. TA12769 Integrate simple choose item widget. Uses the same list items as the Bill Pay payees list. TA12770 Test. Tested rotation changes and the backstack functionality. When navigating to and from the View Pager and manage payees screen all of the data is persisted and is not required to be reloaded. Added an Address POJO for a different address object in the API docs. This object is used for unverified payees.

--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -34,4 +34,12 @@
         This payment has been scheduled by %1$s. It can only be edited/deleted by %1$s.
     </string>
     
+    <string name="payee_name">Payee Name</string>
+    <string name="nickname">Nickname</string>
+    <string name="account_number">Account #</string>
+    <string name="phone_number">Phone #</string>
+    <string name="address">Address</string>
+    <string name="payee_details">Payee Details</string>
+    <string name="payee_memo">Account #/Memo (Optional)</string>
+    
 </resources>
