--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -30,4 +30,9 @@
 	<string name="review_payments_scheduled_payments_empty">You have no scheduled payments.</string>
 	<string name="review_payments_completed_payments_empty">You have no completed payments.</string>
 	<string name="review_payments_canceled_payments_empty">You have no cancelled payments.</string>
+	
+	<!-- Manage Payees Strings  -->
+	<string name="manage_payees">Manage Payees</string>
+	<string name="payee">Payee</string>
+	<string name="manage_payees_welcome">Welcome to Manage Payees</string>
 </resources>
