US5520: Added status message

--- a/Discover-Bank-Phone/res/layout/review_payments_header.xml
+++ b/Discover-Bank-Phone/res/layout/review_payments_header.xml
@@ -57,6 +57,14 @@
             android:textOn="@string/review_payments_canceled_payments"
             android:textSize="14sp" />
     </LinearLayout>
+    
+    <com.discover.mobile.bank.ui.widgets.StatusMessageView
+        android:id="@+id/status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:layout_below="@+id/buttons"/>
 
     <com.discover.mobile.bank.ui.table.TableTitles
         android:id="@+id/table_titles"
@@ -64,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/buttons"
+        android:layout_below="@+id/status"
         android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:layout_marginTop="@dimen/groups_of_elements_padding" />
 
