Highlights: -Fixed integration bug where it was using Card error handler vs Bank error handler -Fixed integration bug where StrongAuth response challenge had been changed and was not being handled correctly -Moved BankErrorResponseHandler to the error package
Note: Testing was done with Mock Services as actual services are currently not working for Payees

Test:
-Tested with No Matches, Made sure that Modal is displayed when there is no match found
-Tested with Single Match
-Tested with Multiple Matches, verifying all elements are displayed correctly, all content is downloaded, and that it is scrollable.
-Tested Navigation from Enter Payee Step 2 to Select Payee Step 3
-Verified URL is generated correctly via debugger as specified in API
-Tested orientation change displayes content correctly
-Tested with an item that had text longer than width of a item layout. Displays ellipses if text is too long.
-Verified Help and feedback buttons are clickable
-Verified Logout and Navigation Menu work from screen
-Verified the message above shows what the search criteria was
-Verified back button takes user back to step 2
-Fixed integration bug where it was using Card error handler vs Bank error handler
-Tested 400 Bad Request
-Tested 404 Not Found
-Tested 500 Internal
-Tested 503 Scheduled Maintenance
-Tested 401 Invalid Token
-Tested 401 Strong Auth
-Tested Login Invalid Inline failure

--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -6,6 +6,7 @@
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
+	    android:padding="@dimen/forms_inner_padding" 
 	    android:background="@drawable/light_gray_bkgrd" >
 	
 	    <TextView
@@ -14,9 +15,9 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentTop="true"
 	        android:layout_centerHorizontal="true"
-	        android:layout_margin="@dimen/forms_inner_padding"
+	        android:paddingBottom="@dimen/forms_inner_padding"
 	        android:text="@string/bank_payee_enter_name" 
-	        style="@style/body_copy_title_max"/>
+	        style="@style/page_title"/>
 	    
 	     <TextView
 	        android:id="@+id/msg_text"
@@ -24,15 +25,13 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@+id/title_text"
 	        android:layout_centerHorizontal="true"
-	        android:layout_marginLeft="@dimen/forms_inner_padding"
-	        android:layout_marginRight="@dimen/forms_inner_padding"
 	        android:text="@string/bank_no_payees_msg" 
 	        android:visibility="gone"
 	        style="@style/sub_copy_medium"/>
 	    
 	     <ImageButton
 	            android:id="@+id/help"
-	            style="@style/orange_help_button"
+	            android:background="@drawable/question_mark_icon"
 	            android:layout_toLeftOf="@+id/title_text"
 	            android:layout_width="@dimen/orange_help_button_size"
 	            android:layout_height="@dimen/orange_help_button_size"
@@ -51,8 +50,6 @@
 	         android:inputType="textNoSuggestions"
 	         android:maxLength="32"
 	         android:textCursorDrawable="@null"
-	         android:layout_marginLeft="@dimen/forms_inner_padding"
-	         android:layout_marginRight="@dimen/forms_inner_padding"
 	         android:layout_marginTop="@dimen/forms_inner_padding"/>
 	   
 	     <TextView
@@ -62,8 +59,6 @@
 	         android:layout_width="fill_parent"
 	         android:layout_height="wrap_content" 
 	         android:layout_centerHorizontal="true"
-	         android:layout_marginLeft="@dimen/forms_inner_padding"
-	      	 android:layout_marginRight="@dimen/forms_inner_padding"
 	      	 android:layout_marginBottom="@dimen/forms_inner_padding"
 	         android:text="@string/bank_invalid_characters"/>
 	     
@@ -82,7 +77,7 @@
 	
 	    <TextView
 	        android:id="@+id/provide_feedback"
-	        style="@style/blue_hyperlink_small"
+	        style="@style/bank_blue_hyperlink_small"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentBottom="true"
