--- a/Discover-Bank-Phone/res/layout/simple_choose_item.xml
+++ b/Discover-Bank-Phone/res/layout/simple_choose_item.xml
@@ -11,10 +11,11 @@
     
     <TextView 
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:layout_alignParentLeft="true"
     	android:layout_toLeftOf="@+id/carrot"
+    	android:singleLine="true"
     	style="@style/blue_choose_item_text"
     	android:paddingRight="@dimen/between_related_elements_padding"
     	android:text="Text"/>
