--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:orientation="vertical" 
     android:background="@drawable/light_gray_bkgrd" >
 
@@ -40,20 +40,39 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
             </LinearLayout>
-
+            
+            <TextView 
+                android:id="@+id/note_text_title"
+                android:layout_below="@+id/content_table"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/note_title"
+                style="@style/body_copy_title"/>
+            
+            <TextView 
+                android:id="@+id/note_text_msg"
+                android:layout_below="@+id/note_text_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/note_text"
+                style="@style/sub_copy_medium"/>
+                
+            <!-- Action Button  -->
             <Button
                 android:id="@+id/actionButton"
                 style="@style/call_to_action_theme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/content_table"
+                android:layout_below="@+id/note_text_msg"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/between_related_elements_padding"
-                android:layout_marginTop="@dimen/modal_top_margin"
+                android:layout_marginTop="@dimen/groups_of_elements_padding"
                 android:drawablePadding="@dimen/between_related_elements_padding"
                 android:text="@string/action_button" />
 
+            <!-- Action Link  -->
             <TextView
                 android:id="@+id/actionLink"
                 style="@style/blue_hyperlink_small"
@@ -65,6 +84,7 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:text="@string/action_link" />
 
+            <!-- Feedback Link -->
             <TextView
                 android:id="@+id/provide_feedback"
                 style="@style/bank_blue_hyperlink_small"
