--- a/Discover-Bank-Phone/res/layout/status_bar.xml
+++ b/Discover-Bank-Phone/res/layout/status_bar.xml
@@ -41,7 +41,7 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/account_name"
         android:paddingLeft="@dimen/nav_section_pading"
-        android:src="@drawable/card_icon" />
+        android:src="@drawable/bank_gray_icon" />
      <ImageView
         android:id="@+id/downArrow"
         android:layout_width="wrap_content"
