US5457: Android: View Account Activity & Scheduled

--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -22,6 +22,7 @@
         android:layout_marginRight="@dimen/forms_inner_padding"
         android:layout_marginTop="@dimen/groups_of_elements_padding"
         android:layout_toLeftOf="@+id/help"
+        android:layout_alignParentLeft="true"
         android:gravity="left"
         android:text="@string/activity_title"/>
 
