--- a/Discover-Commons/res/values/strings_section_account.xml
+++ b/Discover-Commons/res/values/strings_section_account.xml
@@ -21,6 +21,6 @@
     <string name="sub_section_title_user_profile">User Profile</string>
     <string name="section_title_atm_locator">ATM Locator</string>
     <string name="sub_section_title_find_nearby">Find Nearby</string>
-    <string name="sub_section_title_search_location">Search A Location</string>
+    <string name="sub_section_title_search_location">Search a Location</string>
     
 </resources>
