Extracted the amount edit text into a widget

--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -69,5 +69,9 @@
   	 
      <!-- Divider Dimensions -->
      <dimen name="divider_height">1dp</dimen>
+     
+    <!-- Schedule Payments static list height -->
+    <dimen name="listview_vertical_height">60dp</dimen>
+        
     
 </resources>
