--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -119,7 +119,7 @@
                         android:text="$"
                         android:textColor="@color/black" />
 
-                    <EditText
+                    <com.discover.mobile.common.ui.widgets.SchedulePaymentAmountEditText
                         android:id="@+id/amount_edit"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
